infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: "www.moyur.site"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:228306359692:certificate/a3793d3e-6758-4d10-b759-c0c1954c420d"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - host: www.moyur.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-svc
                port:
                  number: 80
    - host: jenkins.moyur.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
    - host: argo.moyur.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-argocd-server
                port:
                  number: 80
